2010-05-11  MORITA Hajime  <morrita@google.com>

Reviewed by Dirk Schulze.

        CSS SVG font doesn't recognize URL without element reference
        https://bugs.webkit.org/show_bug.cgi?id=37144

        * platform/mac/svg/custom/svg-fonts-with-no-element-reference-expected.checksum: Added.
        * platform/mac/svg/custom/svg-fonts-with-no-element-reference-expected.png: Added.
        * platform/mac/svg/custom/svg-fonts-with-no-element-reference-expected.txt: Added.
        * svg/custom/resources/graffiti-with-empty-first-font.svg: Added.
        * svg/custom/svg-fonts-with-no-element-reference.html: Added.
2010-05-11  MORITA Hajime  <morrita@google.com>

        Reviewed by Dirk Schulze.

        CSS SVG font doesn't recognize URL without element reference
        https://bugs.webkit.org/show_bug.cgi?id=37144

        CachedFont::getSVGFontById() did assume that element reference (ID) is given.
        So fixed to handle an empty or missing element reference. In which case,
        the first font element is returned if available.

        Test: svg/custom/svg-fonts-with-no-element-reference.html

        * loader/CachedFont.cpp:
        (WebCore::CachedFont::getSVGFontById):

Canonical link: https://commits.webkit.org/50432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59194 268f45cc-cd09-0410-ab3c-d52691b4dbfc